# dal/model/intent.go
@@ -1,16 +1,13 @@
 package model
 
-import "gorm.io/gorm"
-
 const TableNameIntent = "intent"
 
 // Intent mapped from table <intent>
 type Intent struct {
-	gorm.Model     `swaggerignore:"true"`
-	ApplicantID    uint
-	Applicant      Applicant
-	Group          string `gorm:"type:character varying(16)"`
-	IntentRank     *int16 // nil 为平行志愿
+	ApplicantID    uint      `gorm:"primaryKey;autoIncrement:false" json:"-"`
+	Applicant      Applicant `json:"-"`
+	Group          string    `gorm:"type:character varying(16);primaryKey;autoIncrement:false" json:"group"`
+	IntentRank     uint      // 0 为平行志愿
 	OptionalTimeID uint
 	OptionalTime   OptionalTime
 }
